--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10533,6 +10533,7 @@ body {
 
 .fixed-sidebar-wrapper.open {
   overflow-y: auto;
+  width: 260px;
 }
 
 .fixed-sidebar-wrapper::-webkit-scrollbar-track {
@@ -10618,6 +10619,12 @@ body {
   width: calc(100% - 80px);
   margin-left: auto;
   background: #e1e2e7;
+  -webkit-transition: width .3s;
+  transition: width .3s;
+}
+
+.content-wrapper.open {
+  width: calc(100% - 260px);
 }
 
 .panel-header {
