--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10614,6 +10614,24 @@ body {
   color: #0d2746;
 }
 
+.collapsable .toggler:after {
+  content: "\F0D7";
+}
+
+.collapsable.toggled .toggler:after {
+  content: "\F0D8";
+}
+
+.router-link-active.collapsable .toggler:after {
+  content: "\F0D8";
+}
+
+.toggler {
+  right: 15px;
+  position: absolute;
+  top: 40%;
+}
+
 .content-wrapper {
   min-height: 100vh;
   width: calc(100% - 80px);
